tests/smt2/error/bad_exp.smt2
(assert (and ()))
(assert 0)
(assert #b010)
(assert #xA1eBadF00D)
(assert 0.3)